--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,22 @@
       href="/images/favicon-16x16.png"
     />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <link rel="manifest" href="/site.webmanifest" crossorigin="use-credentials" />
+    <link
+      rel="manifest"
+      href="/site.webmanifest"
+      crossorigin="use-credentials"
+    />
     <link rel="mask-icon" href="/images/favicon.svg" color="#3b82f7" />
-    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
-    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
+    <meta
+      name="theme-color"
+      content="#ffffff"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#000000"
+      media="(prefers-color-scheme: dark)"
+    />
   </head>
   <body>
     <div id="root"></div>
